refactoring
adjusted the code for category and idea

modified the return type for the category service and controller, removed necessary exceptions

still not done

CR:  IuliaD