@@ -20,7 +20,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Log4j2
@@ -34,55 +33,77 @@ public class IdeaServiceImpl implements IdeaService {
 
     private final CategoryRepository categoryRepository;
 
+    private final CategoryServiceImpl categoryService;
+
     private final ModelMapper modelMapper;
 
     public IdeaServiceImpl(IdeaRepository ideaRepository,
                            IdeaRepositoryCustom ideaRepositoryCustom,
                            UserRepository userRepository,
                            CategoryRepository categoryRepository,
-                           ModelMapper modelMapper) {
+                           CategoryServiceImpl categoryService, ModelMapper modelMapper) {
         this.ideaRepository = ideaRepository;
         this.ideaRepositoryCustom = ideaRepositoryCustom;
         this.userRepository = userRepository;
         this.categoryRepository = categoryRepository;
+        this.categoryService = categoryService;
         this.modelMapper = modelMapper;
     }
 
     @Override
     public IdeaResponseDTO addIdea(IdeaRequestDTO idea, String username) {
+
         if (idea.getTitle() == null || idea.getTitle().isEmpty()) {
             throw new FieldValidationException("Please enter a valid title for the idea.");
         }
+
         if (idea.getStatus() == null) {
             throw new FieldValidationException("Please enter a valid status for the idea.");
         }
+
         if (idea.getCategoryList() == null || idea.getCategoryList().size() <= 0) {
             throw new FieldValidationException("Please enter a valid category for the idea.");
         }
+
         if (idea.getText() == null || idea.getText().isEmpty()) {
             throw new FieldValidationException("Please enter a valid text for the idea.");
         }
+
         Idea savedIdea = new Idea();
+
         User user = userRepository.findByUsername(username).orElseThrow(() -> new UserNotFoundException("No user found by this username."));
         savedIdea.setUser(user);
+
         if (idea.getImage() != null) {
             Image image = modelMapper.map(idea.getImage(), Image.class);
             savedIdea.setImage(image);
         }
+
         savedIdea.setStatus(idea.getStatus());
+
         savedIdea.setText(idea.getText());
+
         savedIdea.setTitle(idea.getTitle());
+
         savedIdea.setCategoryList(new ArrayList<>());
         for (CategoryDTO categoryDTO : idea.getCategoryList()) {
+
             Category category = categoryRepository.findByText(modelMapper.map(categoryDTO, Category.class).getText());
+
             if (category == null) {
                 savedIdea.getCategoryList().add(modelMapper.map(categoryDTO, Category.class));
             } else {
                 savedIdea.getCategoryList().add(category);
             }
         }
+
         savedIdea.setDate(new Date());
+
+        if (user.getIdeas() == null) {
+            user.setIdeas(new ArrayList<>());
+        }
         user.getIdeas().add(savedIdea);
+
         IdeaResponseDTO responseDTO = modelMapper.map(ideaRepository.save(savedIdea), IdeaResponseDTO.class);
         responseDTO.setUsername(username);
         return responseDTO;
@@ -90,6 +111,7 @@ public class IdeaServiceImpl implements IdeaService {
 
     @Override
     public IdeaResponseDTO getIdeaById(Long id) throws FieldValidationException {
+
         if (ideaRepository.existsById(id)) {
             IdeaResponseDTO responseDTO = modelMapper.map(ideaRepository.findIdeaById(id), IdeaResponseDTO.class);
             responseDTO.setUsername(ideaRepository.findIdeaById(id).getUser().getUsername());
@@ -101,27 +123,35 @@ public class IdeaServiceImpl implements IdeaService {
 
     @Override
     public IdeaResponseDTO updateIdeaById(Long id, IdeaUpdateDTO ideaUpdateDTO) {
+
         if (ideaRepository.existsById(id)) {
+
             Idea idea = ideaRepository.findById(id).orElseThrow(
                     () -> new IdeaNotFoundException("Idea doesn't exist."));
+
             if (ideaUpdateDTO.getText() != null) {
                 idea.setText(ideaUpdateDTO.getText());
             }
+
             if (ideaUpdateDTO.getStatus() != null) {
                 idea.setStatus(ideaUpdateDTO.getStatus());
             }
+
             if (ideaUpdateDTO.getImage() != null) {
                 idea.setImage(ideaUpdateDTO.getImage());
             }
+
             if (ideaUpdateDTO.getTitle() != null) {
                 idea.setTitle(ideaUpdateDTO.getTitle());
             }
+
             if (ideaUpdateDTO.getCategoryList() != null) {
                 idea.setCategoryList(new ArrayList<>());
                 for (Category category:ideaUpdateDTO.getCategoryList()) {
                     idea.getCategoryList().add(category);
                 }
             }
+
             IdeaResponseDTO responseDTO = modelMapper.map(ideaRepository.save(idea), IdeaResponseDTO.class);
             responseDTO.setUsername(ideaRepository.findIdeaById(id).getUser().getUsername());
             return responseDTO;
@@ -132,6 +162,7 @@ public class IdeaServiceImpl implements IdeaService {
 
     @Override
     public void deleteIdeaById(Long id) {
+
         if (ideaRepository.existsById(id)) {
             ideaRepository.deleteById(id);
         } else {
@@ -141,14 +172,14 @@ public class IdeaServiceImpl implements IdeaService {
 
     @Override
     public Page<IdeaResponseDTO> getAllIdeas(Pageable pageable) {
+
         Page<Idea> ideas = ideaRepository.findAll(pageable);
 
         if (ideas.isEmpty()) {
             throw new FieldValidationException("No ideas found.");
         }
 
-        List<IdeaResponseDTO> ideaResponseDTOs = ideas.getContent()
-                .stream()
+        List<IdeaResponseDTO> ideaResponseDTOs = ideas.stream()
                 .map(idea -> {
                     IdeaResponseDTO responseDTO = modelMapper.map(idea, IdeaResponseDTO.class);
                     responseDTO.setUsername(idea.getUser().getUsername());
@@ -161,9 +192,6 @@ public class IdeaServiceImpl implements IdeaService {
 
     @Override
     public Page<IdeaResponseDTO> getAllIdeasByUserId(Long id, Pageable pageable) {
-        if (id < 0) {
-            throw new FieldValidationException("Please enter a valid ID.");
-        }
 
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException("User doesn't exist."));
@@ -179,7 +207,7 @@ public class IdeaServiceImpl implements IdeaService {
                     responseDTO.setUsername(user.getUsername());
                     return responseDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(ideaResponseDTOs, pageable, ideaResponseDTOs.size());
     }
